--- a/resources/assets/sass/paper/paper/_variables.scss
+++ b/resources/assets/sass/paper/paper/_variables.scss
@@ -263,3 +263,6 @@ $body-bg-color: #f4f3ef !default;
 $breadcrumbs-color: #28313B !default;
 $header-color: #28313B !default;
 $footer-link: #28313B !default;
+
+$pagination-active-link: #337ab7 !default;
+$link-product: #337ab7 !default;
