--- a/resources/assets/sass/paper/admin.custom.scss
+++ b/resources/assets/sass/paper/admin.custom.scss
@@ -178,5 +178,30 @@
   }
 }
 
+#navbar_paper {
+  #dropDownUser {
+    border-left: 1px solid #BD4013;
+    padding-left: 40px;
+    position: relative;
+    min-width: 200px;
 
+    .dropdown-toggle {
+      color: white;
+    }
+
+    &:before {
+      position: absolute;
+      content: '';
+      left: 20px;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: white;
+      background-image: url('/static/img/faces/face-2.jpg');
+      background-size: 30px;
+      top: 50%;
+      margin-top: -15px;
+    }
+  }
+}
 
