--- a/resources/assets/sass/paper/admin.custom.scss
+++ b/resources/assets/sass/paper/admin.custom.scss
@@ -29,16 +29,20 @@
 #add_action_sidebar {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
+  a{
+    color: white;
+    display: block;
+    font-size: 12px;
+    padding: 10px 22px;
+  }
   background: $bg-color-main;
   margin: 30px 25px 15px 25px;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   border: none;
-  color: white;
-  display: block;
-  font-size: 12px;
-  padding: 10px 22px;
+  padding: 0;
+
   width: calc(100% - 50px);
 
   i {
