New component (Create Company) styles / bootstrap-vue component / & some not important changes

--- a/resources/assets/sass/paper/paper/_variables.scss
+++ b/resources/assets/sass/paper/paper/_variables.scss
@@ -266,3 +266,7 @@ $footer-link: #28313B !default;
 
 $pagination-active-link: #337ab7 !default;
 $link-product: #337ab7 !default;
+
+$custom-border-form: 1px solid #D8D8D8 !default;
+$custom-form-color: #D8D8D8 !default;
+$custom-color-inputs: #000 !default;
