--- a/public/css/paper-dashboard.css
+++ b/public/css/paper-dashboard.css
@@ -4609,6 +4609,7 @@ textarea.form-control {
   -webkit-box-sizing: border-box !important;
           box-sizing: border-box !important;
   outline: none;
+  font-family: 'Rubik', sans-serif;
 }
 
 #navbar_paper {
@@ -4637,7 +4638,7 @@ textarea.form-control {
   margin: 30px 25px 15px 25px;
   text-align: center;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 500;
   border: none;
   padding: 0;
   width: calc(100% - 50px);
@@ -4651,7 +4652,8 @@ textarea.form-control {
 }
 
 #add_action_sidebar i {
-  font-size: 8px;
+  font-size: 9px;
+  font-weight: bold;
 }
 
 #add_action_sidebar:hover {
@@ -4729,14 +4731,17 @@ textarea.form-control {
 
 .content-filter .content-value-filter::-webkit-input-placeholder {
   color: #c8c9cb;
+  font-style: italic;
 }
 
 .content-filter .content-value-filter::-moz-placeholder {
   color: #c8c9cb;
+  font-style: italic;
 }
 
 .content-filter .content-value-filter:-ms-input-placeholder {
   color: #c8c9cb;
+  font-style: italic;
 }
 
 .content-filter .label-content-value-filter {
@@ -4812,6 +4817,218 @@ textarea.form-control {
   background-size: 30px;
   top: 50%;
   margin-top: -15px;
+}
+
+.create-company-card {
+  padding: 30px;
+}
+
+.pre-header-card {
+  color: rgba(0, 0, 0, 0.54);
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.create-company-card .form-group {
+  padding: 5px 0;
+}
+
+.create-company-card .form-group.form-group-sm {
+  width: calc(50% - 8px);
+}
+
+.create-company-card .form-group textarea {
+  resize: none;
+  height: 120px;
+  color: #000;
+  border: 1px solid #D8D8D8;
+  width: 100%;
+  padding: 10px 18px;
+  border-radius: 4px;
+}
+
+.create-company-card .form-group textarea::-webkit-input-placeholder {
+  color: #D8D8D8;
+  font-style: italic;
+}
+
+.create-company-card .form-group textarea::-moz-placeholder {
+  color: #D8D8D8;
+  font-style: italic;
+}
+
+.create-company-card .form-group textarea:-ms-input-placeholder {
+  color: #D8D8D8;
+  font-style: italic;
+}
+
+.create-company-card .form-group .label_checkbox {
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.create-company-card .form-group .label_checkbox:before {
+  position: absolute;
+  content: '';
+  width: 24px;
+  left: 0;
+  height: 24px;
+  border-radius: 4px;
+  border: 1px solid #D8D8D8;
+}
+
+.create-company-card .form-group .custom_btn_form {
+  padding: 16px 14px;
+  text-transform: uppercase;
+  background: #D8D8D8;
+  border-radius: 4px;
+  max-width: 175px;
+  cursor: pointer;
+  font-size: 12px;
+  text-align: center;
+  min-height: 50px;
+  display: block;
+  width: 100%;
+  color: #000;
+  margin-bottom: 5px;
+  font-weight: 500;
+  border: none;
+}
+
+.create-company-card .form-group .custom_btn_form:focus,
+.create-company-card .form-group .custom_btn_form:active {
+  background: #bfbebe;
+}
+
+.create-company-card .form-group input[type=checkbox]:checked + label:before {
+  background: #D8D8D8;
+}
+
+.create-company-card .form-group .label_form_group {
+  font-size: 14px;
+  color: #000;
+  margin-bottom: 5px;
+  font-weight: 500;
+  display: block;
+}
+
+.create-company-card .form-group .label_form_group.custom_btn_form {
+  font-size: 12px;
+}
+
+.create-company-card .form-group input[type='text'],
+.create-company-card .form-group input[type='date'] {
+  height: 50px;
+  border: 1px solid #D8D8D8;
+  border-radius: 4px;
+  padding: 10px 18px;
+  color: #000;
+  width: 100%;
+}
+
+.create-company-card .form-group input[type='text'].input_width_auto,
+.create-company-card .form-group input[type='date'].input_width_auto {
+  width: auto;
+  display: inline-block;
+  min-width: 200px;
+  vertical-align: bottom;
+}
+
+.create-company-card .form-group input[type='text']::-webkit-input-placeholder,
+.create-company-card .form-group input[type='date']::-webkit-input-placeholder {
+  color: #D8D8D8;
+  font-style: italic;
+}
+
+.create-company-card .form-group input[type='text']::-moz-placeholder,
+.create-company-card .form-group input[type='date']::-moz-placeholder {
+  color: #D8D8D8;
+  font-style: italic;
+}
+
+.create-company-card .form-group input[type='text']:-ms-input-placeholder,
+.create-company-card .form-group input[type='date']:-ms-input-placeholder {
+  color: #D8D8D8;
+  font-style: italic;
+}
+
+.create-company-card .form-group select {
+  border: 1px solid #D8D8D8;
+  border-radius: 4px;
+  color: black;
+  background: transparent;
+  height: 50px;
+}
+
+.create-company-card .form-group select.select_width_auto {
+  width: auto;
+  display: inline-block;
+  min-width: 200px;
+  vertical-align: bottom;
+}
+
+.create-company-card .form-group select option {
+  color: black;
+}
+
+.create-company-card .form-group .form-group-part {
+  display: inline-block;
+  width: calc(50% - 8px);
+}
+
+.create-company-card .form-group .form-group-part.noneFloat select,
+.create-company-card .form-group .form-group-part.noneFloat input {
+  display: block;
+  width: 100%;
+}
+
+.create-company-card .form-group .form-group-part:first-child {
+  margin-right: 10px;
+}
+
+.create-company-card .form-group .form-group-part:last-child:not(.noneFloat) {
+  float: right;
+}
+
+.create-company-card .form-group .form-group-part.part-sm {
+  width: 200px;
+  max-width: calc(50% - 8px);
+}
+
+.create-company-card .form-group .form-group-part.part-sm:last-child {
+  float: none;
+}
+
+select#select_lang {
+  display: inline-block;
+  float: left;
+  background: transparent;
+  color: rgba(255, 255, 255, 0.54);
+  padding: 18px 5px;
+  padding-left: 25px;
+  height: 100%;
+  width: 70px;
+}
+
+select#select_lang > option {
+  color: black !important;
+}
+
+.custom-divider-form {
+  height: 1px;
+  background: #D8D8D8;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#photo_product {
+  display: none;
+}
+
+.floatRight {
+  float: right !important;
 }
 
 /*      light colors - used for select dropdown         */
