--- a/resources/assets/sass/paper/admin.custom.scss
+++ b/resources/assets/sass/paper/admin.custom.scss
@@ -6,7 +6,7 @@
 * {
   box-sizing: border-box !important;
   outline: none;
-
+  font-family: 'Rubik', sans-serif;
 }
 #navbar_paper {
   background: $bg-color-main;
@@ -39,14 +39,15 @@
   margin: 30px 25px 15px 25px;
   text-align: center;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 500;
   border: none;
   padding: 0;
 
   width: calc(100% - 50px);
 
   i {
-    font-size: 8px;
+    font-size: 9px;
+    font-weight: bold;
   }
 
   &:hover {
@@ -123,12 +124,15 @@
     font-size: 14px;
     &::-webkit-input-placeholder {
       color: #c8c9cb;
+      font-style: italic;
     }
     &::-moz-placeholder {
       color: #c8c9cb;
+      font-style: italic;
     }
     &:-ms-input-placeholder {
       color: #c8c9cb;
+      font-style: italic;
     }
   }
   .label-content-value-filter {
@@ -208,4 +212,204 @@
     }
   }
 }
+
+.create-company-card {
+  padding: 30px;
+}
+
+.pre-header-card {
+  color: rgba(0, 0, 0, 0.54);
+  text-transform: uppercase;
+  margin-bottom: 30px;
+
+}
+
+
+
+  .create-company-card {
+    .form-group {
+      padding: 5px 0;
+
+      &.form-group-sm {
+        width: calc(50% - 8px);
+      }
+
+      textarea {
+        resize: none;
+        height: 120px;
+        color: $custom-color-inputs;
+        border: $custom-border-form;
+        width: 100%;
+        padding: 10px 18px;
+        border-radius: 4px;
+
+        &::-webkit-input-placeholder {
+          color: $custom-form-color;
+          font-style: italic;
+        }
+        &::-moz-placeholder {
+          color: $custom-form-color;
+          font-style: italic;
+        }
+        &:-ms-input-placeholder {
+          color: $custom-form-color;
+          font-style: italic;
+        }
+      }
+
+      .label_checkbox {
+        position: relative;
+        padding-left: 30px;
+        margin-bottom: 10px;
+        display: block;
+        &:before {
+          position: absolute;
+          content: '';
+          width: 24px;
+          left: 0;
+          height: 24px;
+          border-radius: 4px;
+          border: $custom-border-form;
+        }
+      }
+
+      .custom_btn_form {
+        padding: 16px 14px;
+        text-transform: uppercase;
+        background: $custom-form-color;
+        border-radius: 4px;
+        max-width: 175px;
+        cursor: pointer;
+        font-size: 12px;
+        text-align: center;
+        min-height: 50px;
+        display: block;
+        width: 100%;
+        color: #000;
+        margin-bottom: 5px;
+        font-weight: 500;
+        border: none;
+
+        &:focus,&:active {
+          background: darken($custom-form-color, 10);
+        }
+      }
+
+      input[type=checkbox]:checked + label:before {
+        background: $custom-form-color;
+      }
+
+      .label_form_group {
+        font-size: 14px;
+        color: $custom-color-inputs;
+        margin-bottom: 5px;
+        font-weight: 500;
+        display: block;
+
+        &.custom_btn_form {
+          font-size: 12px;
+        }
+      }
+
+      input[type='text'], input[type='date'] {
+        height: 50px;
+        border: $custom-border-form;
+        border-radius: 4px;
+        padding: 10px 18px;
+        color: $custom-color-inputs;
+        width: 100%;
+
+        &.input_width_auto {
+          width: auto;
+          display: inline-block;
+          min-width: 200px;
+          vertical-align: bottom;
+        }
+
+        &::-webkit-input-placeholder {
+          color: $custom-form-color;
+          font-style: italic;
+        }
+        &::-moz-placeholder {
+          color: $custom-form-color;
+          font-style: italic;
+        }
+        &:-ms-input-placeholder {
+          color: $custom-form-color;
+          font-style: italic;
+        }
+
+      }
+
+      select {
+        border: $custom-border-form;
+        border-radius: 4px;
+        color: black;
+        background: transparent;
+        height: 50px;
+        &.select_width_auto {
+          width: auto;
+          display: inline-block;
+          min-width: 200px;
+          vertical-align: bottom;
+        }
+
+        option {
+          color: black;
+        }
+      }
+
+      .form-group-part {
+        display: inline-block;
+        width: calc(50% - 8px);
+        &.noneFloat select, &.noneFloat input {
+          display: block;
+          width: 100%;
+        }
+        &:first-child {
+          margin-right: 10px;
+        }
+        &:last-child:not(.noneFloat) {
+          float: right;
+        }
+        &.part-sm {
+          width: 200px;
+          max-width: calc(50% - 8px);
+          &:last-child {
+            float: none;
+          }
+        }
+      }
+    }
+  }
+
+  select#select_lang {
+    display: inline-block;
+    float: left;
+    background: transparent;
+    color: rgba(255, 255, 255, 0.54);
+    padding: 18px 5px;
+    padding-left: 25px;
+    height: 100%;
+    width: 70px;
+
+    &>option {
+      color: black !important;
+    }
+  }
+
+  .custom-divider-form {
+    height: 1px;
+    background: $custom-form-color;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  #photo_product {
+    display: none;
+  }
+
+  .floatRight {
+    float: right !important;
+  }
 
