--- a/resources/assets/sass/paper/paper/_variables.scss
+++ b/resources/assets/sass/paper/paper/_variables.scss
@@ -12,7 +12,7 @@ $smoke-bg: #F5F5F5 !default;
 $pale-bg: #FFFCF5 !default;
 $medium-pale-bg: #F1EAE0 !default;
 
-$table-line-color: #CCC5B9 !default;
+$table-line-color: #E8E8E9 !default;
 $muted-color: #a49e93 !default;
 
 $black-bg: rgba(30, 30, 30, .97) !default;
@@ -270,3 +270,5 @@ $link-product: #337ab7 !default;
 $custom-border-form: 1px solid #D8D8D8 !default;
 $custom-form-color: #D8D8D8 !default;
 $custom-color-inputs: #000 !default;
+
+$custom-btn-filter-color: #DCDCDC !default;;
