--- a/resources/assets/sass/paper/admin.custom.scss
+++ b/resources/assets/sass/paper/admin.custom.scss
@@ -178,7 +178,7 @@
   }
 }
 
-#campaingsTable td>a {
+#campaignsTable td>a {
   color: $link-product;
 
   &:hover {
@@ -227,6 +227,15 @@
 
 
   .campaign-card {
+
+    &.campaign-results .form-group input, &.campaign-results .form-group select {
+      background: $custom-form-color;
+
+      option {
+        background: white;
+      }
+    }
+
     .form-group {
       padding: 5px 0;
 
@@ -310,6 +319,8 @@
           font-size: 12px;
         }
       }
+
+
 
       input[type='text'], input[type='date'] {
         height: 50px;
@@ -419,5 +430,38 @@
     margin-left: 55px;
     li a {
       display: block;
+    }
+  }
+
+
+  .filter_high_low {
+    position: relative;
+    padding-right: 35px;
+    font-weight: 500;
+
+    .btn-high, .btn-low {
+      position: absolute;
+      content: '';
+      right: 10px;
+      border: 5px solid transparent;
+      border-bottom: 5px solid $custom-btn-filter-color;
+      top: 50%;
+      margin-top: -13px;
+      background: transparent;
+      padding: 0;
+    }
+    .btn-high {
+      &:hover, &:active {
+        border-bottom: 5px solid darken($custom-btn-filter-color, 35);
+      }
+    }
+    .btn-low {
+      border-bottom: 5px solid transparent;
+      border-top: 5px solid $custom-btn-filter-color;
+      margin-top: 2px;
+
+      &:hover, &:active {
+        border-top: 5px solid darken($custom-btn-filter-color, 35);
+      }
     }
   }
