--- a/resources/assets/sass/paper/paper/_variables.scss
+++ b/resources/assets/sass/paper/paper/_variables.scss
@@ -34,7 +34,7 @@ $success-input-bg: #ABF3CB !default;
 $other-medium-gray: #A49E93 !default;
 $transparent-bg: transparent !default;
 
-$default-bg-icons: #707070 !default;
+$default-bg-icons: #A7A7A7 !default;
 
 $default-color: #131D28 !default;
 $default-bg: #66615B !default;
@@ -271,4 +271,8 @@ $custom-border-form: 1px solid #D8D8D8 !default;
 $custom-form-color: #D8D8D8 !default;
 $custom-color-inputs: #000 !default;
 
-$custom-btn-filter-color: #DCDCDC !default;;
+$custom-btn-filter-color: #DCDCDC !default;
+
+$custom-color-elem-bonus: #E1E2E4 !default;
+
+$custom-color-btn-bonus: #686F76 !default;
