--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -18,7 +18,7 @@ $sidebar-nav-link-hover-color:          #fff !default;
 $sidebar-nav-link-hover-bg:             $main-color !default;
 $sidebar-nav-link-active-bg:            $main-color !default;
 
-$sidebar-nav-link-icon-color:           #fff !default;
+$sidebar-nav-link-icon-color:           #000 !default;
 $sidebar-nav-link-active-icon-color:    #fff !default;
 $sidebar-nav-link-hover-icon-color:     #fff !default;
 
