--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17679,7 +17679,7 @@ base-chart.chart {
 .sidebar .nav-link i,
 .sidebar .navbar .dropdown-toggle i,
 .navbar .sidebar .dropdown-toggle i {
-  color: #fff;
+  color: #000;
   display: inline-block;
   font-size: 14px;
   margin: 0 0.5rem 0 0;
@@ -18435,7 +18435,7 @@ base-chart.chart {
 }
 
 .sidebar .nav-label i {
-  color: #fff;
+  color: #000;
   font-size: 10px;
   margin: -3px 0.5rem 0 0;
   text-align: center;
