--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -23,8 +23,7 @@ $sidebar-nav-link-active-icon-color:    #fff !default;
 $sidebar-nav-link-hover-icon-color:     #fff !default;
 
 $sidebar-nav-dropdown-indicator-color:  #fff !default;
-
-
+$sidebar-nav-dropdown-bg:               rgba(189, 64, 19, 0.39) !default;
 
 
 // sizes
